REWIND-155: added achievements and rewards
