# Backend/api-gateway-service/internal/app/responses/auth.go
@@ -1,5 +1,9 @@
 package responses
 
+import (
+	"time"
+)
+
 // StartRegistrationResponse represents the response for the StartRegistration endpoint.
 type StartRegistrationResponse struct {
 	RegistrationID string `json:"registration_id"` // Unique ID to track the registration process
@@ -50,13 +54,14 @@ type DeleteUserResponse struct {
 
 // GetUserByIDResponse represents the HTTP response body for getting user details by ID.
 type GetUserByIDResponse struct {
-	ID                  uint64 `json:"id"`                    // User ID
-	Username            string `json:"username"`              // Username
-	Email               string `json:"email"`                 // Email address
-	Image               string `json:"image"`                 // User image URL
-	MemoriesAddedCount  uint64 `json:"memories_added_count"`  // Number of memories added by the user
-	InvitedMembersCount uint64 `json:"invited_members_count"` // Number of invited members
-	MemoriesViewedCount uint64 `json:"memories_viewed_count"` // Number of memories rolled by the user
+	ID                  uint64    `json:"id"`                    // User ID
+	Username            string    `json:"username"`              // Username
+	Email               string    `json:"email"`                 // Email address
+	Image               string    `json:"image"`                 // User image URL
+	MemoriesAddedCount  uint64    `json:"memories_added_count"`  // Number of memories added by the user
+	InvitedMembersCount uint64    `json:"invited_members_count"` // Number of invited members
+	MemoriesViewedCount uint64    `json:"memories_viewed_count"` // Number of memories rolled by the user
+	CreatedAt           time.Time `json:"created_at"`
 }
 
 type UpdateUsernameResponse struct {
@@ -97,4 +102,15 @@ type DeleteAvatarResponse struct {
 
 type UpdateMemoriesViewedResponse struct {
 	Success bool `json:"success"`
+}
+
+type GetUserAchievementsResponse struct {
+	Achievements []UserAchievement `json:"achievements"`
+}
+
+type UserAchievement struct {
+	ID         uint   `json:"id"`
+	Name       string `json:"name"`
+	Icon       string `json:"icon"` // URL к иконке
+	IsUnlocked bool   `json:"is_unlocked"`
 }
